--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,9 @@
 SUPABASE_KEY = sb_publishable_2lEYLZPEb7BAnTujRG_C-A_LP-Kxt0R
 SUPABASE_URL = https://kvrlbaxewmrauxdbffqt.supabase.co
 PORT = 5000
+
+ADMIN_EMAIL=admin@gmail.com
+ADMIN_PASSWORD=Admin123
+JWT_SECRET=superrahasia
+
+ 
